--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="textview">TextView</string>
     <string name="textview2">TextView</string>
     <string name="todo">TODO</string>
+    <color name="lg">#FBFAF5</color>
+
 </resources>
